--- a/fireworks/flask_site/templates/home.html
+++ b/fireworks/flask_site/templates/home.html
@@ -14,8 +14,11 @@
   {% endif %}
 {% endwith %}
 
+
 <div class="row pull-down">
     <div class="span6">
+        <a href="/new_wf" class="btn btn-primary">New Workflows</a>
+        <hr />
         <table class="table table-bordered">
             <tr><th colspan="3"><a href="/wf">Newest Workflows</a></th></tr>
             {% for wf in wf_info %}
