--- a/fireworks/flask_site/templates/new_wf.html
+++ b/fireworks/flask_site/templates/new_wf.html
@@ -18,8 +18,11 @@
         <label for="working_dir"><strong>Working Directory: </strong>(Absolute path of current workspace on Queue Cluster)</label>        
         <input type="text" class="form-control" id="working_dir" name="working_dir" required>
 
+        <label for="username"><strong>Username: </strong></label>        
+        <input type="text" class="form-control" id="username" name="username" required>
+
         <label for="structure_file"><strong>Structure File Path:</strong> (If the input file path is a directory, all cif files in the directory will be submitted.)</label>        
-        <input type="text" class="form-control" id="input_file" name="input_file" required>
+        <input type="text" class="form-control" id="structure_file" name="structure_file" required>
 
         <label for="parameter_file"><strong>Parameter File Path:</strong> (Optional)</label>        
         <input type="text" class="form-control" id="paramter_file" name="paramter_file">
