--- a/fireworks/flask_site/templates/home.html
+++ b/fireworks/flask_site/templates/home.html
@@ -17,7 +17,7 @@
 
 <div class="row pull-down">
     <div class="span6">
-        <a href="/new_wf" class="btn btn-primary">New Workflows</a>
+        <a href="/new_wf" class="btn btn-primary">New Workflow</a>
         <hr />
         <table class="table table-bordered">
             <tr><th colspan="3"><a href="/wf">Newest Workflows</a></th></tr>
