--- a/fireworks/flask_site/templates/new_wf.html
+++ b/fireworks/flask_site/templates/new_wf.html
@@ -22,17 +22,18 @@
 <form id="new_wf" class="new_wf" method="post" action="{{ url_for('submit_wf') }}">
     <div class="form-group">
 
-        <label for="working_dir"><strong>Working Directory: </strong>(Absolute path of current workspace on Queue Cluster)</label>        
-        <input type="text" class="form-control" id="working_dir" name="working_dir" placeholder="/shared/ws/1000000000/${工作空间名称}" required>
+        <label for="working_dir"><strong>Workspace Name: </strong>(Required. The name of current workspace where the workflow will be submitted.)</label>        
+        <input type="text" class="form-control" id="working_dir" name="working_dir" required>
 
-        <label for="structure_file"><strong>Structure File Path:</strong> (If the input file path is a directory, all cif files in the directory will be submitted.)</label>        
+        <label for="username"><strong>Username:</strong> (Required. The workflow will be submitted to queue cluster under the specified username.)</label>        
+        <input type="text" class="form-control" id="username" name="username" required>
+        
+        <label for="structure_file"><strong>Structure File Path:</strong> (Required. If the input file path is a directory, all cif files in the directory will be submitted.)</label>        
         <input type="text" class="form-control" id="structure_file" name="structure_file" required>
 
         <label for="parameter_file"><strong>Parameter File Path:</strong> (Optional)</label>        
         <input type="text" class="form-control" id="parameter_file" name="parameter_file">
 
-        <label for="username"><strong>Username:</strong> (Optional. If not specified, the workflow will be submitted under the workspace owner's username.)</label>        
-        <input type="text" class="form-control" id="username" name="username">
 
     <hr/>
         <button id="submit_btn" type="submit" class="btn btn-primary submission" onclick="toggle()">Submit</button>
